# crospi_default_plugins

./: CMakeLists.txt  README.md  package.xml  plugins.xml
.github/workflows/: gitlab-mirror.yml
include/: DELETEME_fileoutputhandlerfactory.hpp  DELETEME_jointstateoutputhandlerfactory.hpp  DELETEME_tfoutputhandlerfactory.hpp  DELETEME_topicoutputhandlerfactory.hpp
include/inputhandlers/: jointstateinputhandler.hpp  poseinputhandler.hpp  tfinputhandler.hpp  topicinputhandler.hpp  twistinputhandler.hpp  vectorinputhandler.hpp  wrenchinputhandler.hpp
include/outputhandlers/: DELETEME_fileoutputhandler.hpp  jointstateoutputhandler.hpp  tfoutputhandler.hpp  topicoutputderivativeshandler.hpp  topicoutputhandler.hpp
include/robotdrivers/: ros_topics_driver_crospi.hpp
include/simulators/: simple_kinematic_simulation.hpp
json_schemas/: JointStateInputHandler.schema.json  JointStateOutputHandler.schema.json  PoseInputHandler.schema.json  TFInputHandler.schema.json  TFOutputHandler.schema.json  TopicInputHandler.schema.json  TopicOutputDerivativesHandler.schema.json  TopicOutputHandler.schema.json  TwistInputHandler.schema.json  VectorInputHandler.schema.json  WrenchInputHandler.schema.json  ros_topics_driver_crospi.schema.json  simple_kinematic_simulation.schema.json
json_schemas/deleteme/: FileOutputHandler.schema.json
src/inputhandlers/: DELETEME_twistinputhandlerfactory.cpp  jointstateinputhandler.cpp  poseinputhandler.cpp  tfinputhandler.cpp  topicinputhandler.cpp  twistinputhandler.cpp  vectorinputhandler.cpp  wrenchinputhandler.cpp
src/outputhandlers/: TODO_tfoutputhandler.cpp  jointstateoutputhandler.cpp  topicoutputderivativeshandler.cpp  topicoutputhandler.cpp
src/outputhandlers/deleteme/: DELETEME_fileoutputhandler.cpp  DELETEME_jointstateoutputhandlerfactory.cpp  DELETEME_tfoutputhandlerfactory.cpp  DELETEME_topicoutputhandlerfactory.cpp
src/robotdrivers/: ros_topics_driver_crospi.cpp
src/simulators/: simple_kinematic_simulation.cpp
